--- a/MyPomodoroTimer/MyPomodoroTimer.csproj
+++ b/MyPomodoroTimer/MyPomodoroTimer.csproj
@@ -61,6 +61,12 @@
     <Compile Include="Form2.Designer.cs">
       <DependentUpon>Form2.cs</DependentUpon>
     </Compile>
+    <Compile Include="FromConfig.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FromConfig.Designer.cs">
+      <DependentUpon>FromConfig.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Route\MyPages.cs" />
@@ -69,6 +75,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Form2.resx">
       <DependentUpon>Form2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="FromConfig.resx">
+      <DependentUpon>FromConfig.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
