--- a/MyPomodoroTimer/MyPomodoroTimer.csproj
+++ b/MyPomodoroTimer/MyPomodoroTimer.csproj
@@ -69,6 +69,7 @@
       <DependentUpon>FormConfig.cs</DependentUpon>
     </Compile>
     <Compile Include="Models\PomodoroSettings.cs" />
+    <Compile Include="Models\PomodoroTimer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Route\MyPages.cs" />
