separando classe pomodoro timer

--- a/MyPomodoroTimer/MyPomodoroTimer.csproj
+++ b/MyPomodoroTimer/MyPomodoroTimer.csproj
@@ -105,9 +105,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="assets\music\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <COMReference Include="MediaPlayer">
       <Guid>{22D6F304-B0F6-11D0-94AB-0080C74C7E95}</Guid>
